--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,38 @@
   <meta charset="UTF-8">
   <title>Home page</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css" media="all">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="javascripts/scroll.js"></script>
 </head>
 <body>
   <!-- <img src="images/logo1.png" alt="Logo" id="logo"> -->
   <!-- simple logo made in illustrator -->
-  <div class="nav">
-    <a href="About Me.html">About Me</a>
+  <!-- <div class="nav">
+    <a href="index.html">About Me</a>
     <a href="contact.html">Contact</a>
-    <!-- <a href="about.html">About Me</a> -->
-  </div>
-  <div id ="splitbar"><p> </p></div>
+  </div> -->
+  <!-- <div class = "vbar" id ="v1bar"></div>
+  <div class = "vbar" id ="v2bar"></div> -->
+
+
   <div id = "header">
     <h1>RISHAB KAUL</h1>
   </div>
-  <div id ="content">
-    <p>etc</p>
+  <div class = "hbar" id ="h1bar"></div>
+
+  <div class ="content">
+    <div class="hook">
+      <p id = "cat1">Hey there, this is Rishab.</p>
+    </div>
+    <div class="hook">
+      <p id = "cat2">I hail from the ancient, cold, treacherous lands of Long Island, New York. </p>
+    </div>
+    <div class="hook">
+      <p id = "cat3">My interests lie in Programming and Web Design, and you find me experimenting with both.</p>
+    </div>
+    <div class="hook">
+      <p id = "cat4">I'm available for hire- contact me <em>here.</em></p>
+    </div>
   </div>
 </body>
 </html>
