--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <div class = "vbar" id ="v2bar"></div> -->
 
 
-  <div id = "header">
+  <div id = "header" class = "sticky">
     <h1>RISHAB KAUL</h1>
   </div>
   <div class = "hbar" id ="h1bar"></div>
