--- a/public/index.html
+++ b/public/index.html
@@ -2,39 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home page</title>
-  <link rel="stylesheet" type="text/css" href="stylesheets/style.css" media="all">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="javascripts/scroll.js"></script>
+  <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="all">
+  <script src="javascripts/main.js"></script>
 </head>
-<body>
-  <!-- <img src="images/logo1.png" alt="Logo" id="logo"> -->
-  <!-- simple logo made in illustrator -->
-  <!-- <div class="nav">
-    <a href="index.html">About Me</a>
-    <a href="contact.html">Contact</a>
-  </div> -->
-  <!-- <div class = "vbar" id ="v1bar"></div>
-  <div class = "vbar" id ="v2bar"></div> -->
-
-
-  <div id = "header" class = "sticky">
+<body id = "body">
+  <!-- <div id = "header" class = "sticky">
     <h1>RISHAB KAUL</h1>
-  </div>
-  <div class = "hbar" id ="h1bar"></div>
+  </div>   -->
 
   <div class ="content">
-    <div class="hook">
-      <p id = "cat1">Hey there, this is Rishab.</p>
+    <div class="hook"id = "cat1">
+      <p >Hey there, this is Rishab.</p>
     </div>
-    <div class="hook">
-      <p id = "cat2">I hail from the ancient, cold, treacherous lands of Long Island, New York. </p>
+    <div class="hook" id = "cat2">
+      <p >I hail from the ancient, cold, treacherous lands of Long Island, New York. </p>
     </div>
-    <div class="hook">
-      <p id = "cat3">My interests lie in Programming and Web Design, and you find me experimenting with both.</p>
+    <div class="hook" id = "cat3">
+      <p >My interests lie in Programming and Web Design, and you can find me experimenting with both.</p>
     </div>
-    <div class="hook">
-      <p id = "cat4">I'm available for hire- contact me <em>here.</em></p>
+    <div class="hook" id = "cat4">
+      <p >I'm available for hire- contact me <em>here.</em></p>
     </div>
   </div>
 </body>
