--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home page</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="all">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <script src="javascripts/main.js"></script>
 </head>
 <body id = "body">
@@ -14,16 +15,17 @@
 
   <div class ="content">
     <div class="hook"id = "cat1">
-      <p >Hey there, this is Rishab.</p>
+      <p >RISHAB KAUL</p>
     </div>
     <div class="hook" id = "cat2">
-      <p >I hail from the ancient, cold, treacherous lands of Long Island, New York. </p>
+      <p >Hails from the ancient, treacherous lands of New York. </p>
     </div>
     <div class="hook" id = "cat3">
-      <p >My interests lie in Programming and Web Design, and you can find me experimenting with both.</p>
+      <p>Web Developer and Designer</p>
     </div>
     <div class="hook" id = "cat4">
-      <p >I'm available for hire- contact me <em>here.</em></p>
+      <p>Resume <a href="images/Resume.pdf">here.</a></p>
+      <p>Looking for work- contact me <a href="mailto:rkaulrkaul@gmail.com">here.</a></p>
     </div>
   </div>
 </body>
